--- a/php-reflected-xss/docker-compose.yml
+++ b/php-reflected-xss/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
     mysql:
-        image: mysql
+        image: mysql:5.7.19
         environment:
             MYSQL_ALLOW_EMPTY_PASSWORD: "true"
         volumes:
