php-stored-xss: add text

--- a/php-stored-xss/index.yaml
+++ b/php-stored-xss/index.yaml
@@ -1,22 +1,20 @@
-vaersion: 1
-title: PHPにおけるXSS対策の基本(フォーム編)
-description: PHPにおけるXSS対策の基本を学びます
+version: 1
+title: 持続型XSS
+description: 持続型XSSへの対策の基本を学びます
 difficulty: beginner
 language: php
 tag:
     - php
     - xss
 text:
-    - title: XSS概要
+    - title: 概要
       file: text/step1.md
-    - title: 悪用例
+    - title: 攻撃方法
       file: text/step2.md
-    - title: 根本的対策
+    - title: 防御策
       file: text/step3.md
-    - title: PHPにおける対策
+    - title: 演習
       file: text/step4.md
-    - title: 修正
-      file: text/step5.md
 files:
     - www/auth.php
     - www/authFunction.php
