--- a/php-ssrf/docker-compose.yml
+++ b/php-ssrf/docker-compose.yml
@@ -9,6 +9,13 @@ services:
           - "./mysql:/etc/mysql/conf.d"
       ports:
           - "3306:3306"
+    customer:
+        image: "nginx:alpine"
+        volumes:
+            - "./customer/www:/var/www"
+            - "./customer/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
+        depends_on:
+            - "php-fpm"
     php-fpm:
         build:
             context: "."
